--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   iconly: ^1.0.1
+  image_picker: ^0.8.5+3
   provider: ^6.0.3
   shared_preferences: ^2.0.15
 
